hphp/hack/test/typecheck/reactive/test_global_class.php.coeffects.exp
File "test_global_class.php", line 11, characters 25-26:
Static property access requires the capability AccessStaticVariable, which is not provided by the context. (Typing[4401])
  File "test_global_class.php", line 10, characters 16-17:
  The local (enclosing) context provides the capability Rx
